--- a/packages/socket-apollo-link/package.json
+++ b/packages/socket-apollo-link/package.json
@@ -7,7 +7,10 @@
   "react-native": "src/index",
   "scripts": {
     "version": "nps version",
-    "prepack": "nps prepack"
+    "prepack": "nps prepack",
+    "build": "bsb -make-world",
+    "clean": "bsb -clean-world",
+    "start": "bsb -make-world -w"
   },
   "repository": {
     "type": "git",
@@ -33,11 +36,14 @@
   ],
   "dependencies": {
     "@absinthe/socket": "0.2.1",
+    "@apollo/client": "^3.3.7",
     "@babel/runtime": "7.2.0",
     "apollo-link": "1.2.5",
+    "bs-platform": "^8.4.2",
     "core-js": "2.6.0",
     "flow-static-land": "0.2.8",
     "graphql": "14.0.2",
+    "phoenix": "^1.5.7",
     "zen-observable": "0.8.11"
   },
   "devDependencies": {
